# able

./: .env.example  .gitignore  AI_주식자동매매_플랫폼_보완분석보고서.docx  Makefile  PROJECT_STATUS.md  WORK_LOG.md  WORK_LOG_2026-02-16.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 137261e2e3fa_add_trading_recipes_table.py  5df163bb88a2_merge_heads.py  66575a17a2c4_initial_schema.py  6b0bf7889cf6_add_notifications_tables.py  78eac99ae671_add_auto_execute_to_trading_recipes.py  a3b7c9d2e4f1_add_agent_memories.py  b4c8d1e5f2a3_add_execution_fields.py  c5d9e2f3a4b6_add_ai_analysis_results.py  d6e0f3a4b5c7_add_daily_market_reports.py  e7f1a4b5c6d8_add_strategy_unique_constraint.py  f8a2b3c4d5e6_add_factor_snapshots.py  g9b3c4d5e6f7_add_discovered_patterns.py
backend/app/: config.py  main.py
backend/app/agents/: memory.py  orchestrator.py  state.py
backend/app/analysis/: composer.py
backend/app/core/: account_lockout.py  audit.py  circuit_breaker.py  encryption.py  exceptions.py  metrics.py  rate_limit.py  security.py  security_headers.py
backend/app/data/: krx_stocks.json
backend/app/db/: session.py
backend/app/execution/: __init__.py  engine.py  slippage.py  smart_router.py  twap.py  vwap.py
backend/app/models/: __init__.py  agent_memory.py  agent_session.py  ai_analysis.py  api_credential.py  backtest.py  base.py  daily_report.py  discovered_pattern.py  factor_snapshot.py  notification.py  order.py  trade.py  (+4 more)
backend/scripts/: fetch_krx_stocks.py
backend/tests/: conftest.py
(+280 files in other folders)
