[project]
name = "able-backend"
version = "0.1.0"
description = "ABLE - AI-Powered Stock Auto-Trading Platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    # Redis
    "redis>=5.0",
    # Auth & Security
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "cryptography>=43.0",
    # HTTP client
    "httpx>=0.27.0",
    # Async tasks
    "celery[redis]>=5.4",
    # AI / LangGraph
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    # Financial analysis
    "pandas>=2.0",
    "numpy>=1.24",
    "pandas-ta>=0.3.14b1",
    "vectorbt>=0.26",
    "optuna>=4.0",
    "yfinance>=0.2.31",
    # WebSocket
    "websockets>=13.0",
    # Monitoring
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
